# opengl_basics

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  README.md  Shader.cpp  Shader.h  Texture.h  Window.cpp  tutorial01.cpp  tutorial01_first_window
shaders/: shader.frag  shader.vert
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
